--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -67,18 +67,17 @@ input:-webkit-autofill {
 .floating_menu a:hover {
   color: #606060;
 }
+.floating_menu a:link {
+  color: #fff;
+}
+.floating_menu a:visited {
+  color: #fff;
+}
 .floating_menu .main_menu {
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.floating_link li {
-  color: #fff;
-}
-.floating_link li:hover {
-  color: #606060;
 }
 
 .menu_active {
