--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -80,6 +80,10 @@ input:-webkit-autofill {
   align-items: center;
 }
 
+.floating_link li:hover {
+  color: #606060;
+}
+
 .menu_active {
   transition: 1s;
   opacity: 1;
