--- a/resources/css/custom.scss
+++ b/resources/css/custom.scss
@@ -95,13 +95,11 @@ input:-webkit-autofill {
         align-items: center;
     }
 }
-// .floating_link{
-//     li{ color:#fff;
-//         }
-//     li:hover{
-//         color: #606060;
-//     }
-// }
+.floating_link{
+    li:hover{
+        color: #606060;
+    }
+}
 .menu_active {
     transition: 1s;
     opacity: 1;
