--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -12,7 +12,7 @@ a {
   text-decoration: none;
 }
 
-a:visited {
+a {
   color: #fff;
 }
 
@@ -69,9 +69,6 @@ input:-webkit-autofill {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-.floating_menu .floating_link:link {
-  color: #fff;
 }
 
 .menu_active {
